# resume-online

./: .gitignore  Cargo.toml  README.md  index.html  release.sh  tailwind.config.js
docs/: CNAME  index.html  online-resume-2e1adbb5835d02ae.js  online-resume-2e1adbb5835d02ae_bg.wasm  online-resume-3d786ee282c8ac63.js  online-resume-3d786ee282c8ac63_bg.wasm  online-resume-5758d1bb23e6ef4b.js  online-resume-5758d1bb23e6ef4b_bg.wasm  online-resume-62669b414dc7f32e.js  online-resume-62669b414dc7f32e_bg.wasm  online-resume-6d78890d33e42fc.js  online-resume-6d78890d33e42fc_bg.wasm  online-resume-78fcaeed681c26b1.js  online-resume-cd14678960e79614.js  online-resume-cd14678960e79614_bg.wasm  online-resume-d93a0bb1e5b30852.js  online-resume-d93a0bb1e5b30852_bg.wasm  online-resume-e4e4b7f3483823d8.js  online-resume-e4e4b7f3483823d8_bg.wasm  online-resume-f50b4ab98fa54dcb.js  online-resume-f50b4ab98fa54dcb_bg.wasm  resume-online-3c08880cb9090d0b.js  resume-online-3c08880cb9090d0b_bg.wasm  resume-online-5275f7aacbf18871.js  resume-online-5275f7aacbf18871_bg.wasm  resume-online-5e5f7c4898c7e1a2.js  resume-online-5e5f7c4898c7e1a2_bg.wasm  resume-online-bb172007cd845d1e.js  resume-online-bb172007cd845d1e_bg.wasm  resume-online-bbb9cd685bc61078.js  resume-online-bbb9cd685bc61078_bg.wasm  resume-online-d46a80eb4f9c5c84.js  resume-online-d46a80eb4f9c5c84_bg.wasm  tailwind-169d61fdaa855f38.css  tailwind-4f632f0e75372bb1.css  tailwind-57d3d429a95c9cf8.css  tailwind-69ef155d460ada2d.css  tailwind-7c62f91eeeed320e.css  tailwind-7e27d7aa5c9f03d4.css  tailwind-7f0ac017c44ee517.css  (+7 more)
src/: app.rs  (+1 more)
(+14 files in other folders)
